// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse DrawIO to LikeC4 - minimal diagram 1`] = `
"specification {
  color drawio_color_1 #dae8fc
  color drawio_color_2 #d5e8d4
}

model {

  Frontend = container 'Frontend'
  {
    style { color drawio_color_1 }
  }

  Backend = container 'Backend'
  {
    style { color drawio_color_2 }
  }

  Frontend -> Backend 'requests'
}

views {
  view index {
    include *
  }
}
"
`;

exports[`parse DrawIO to LikeC4 - with LikeC4 description and technology 1`] = `
"specification {
  color drawio_color_1 #3b82f6
}

model {

  API = container 'API'
  {
    style { color drawio_color_1 }
    description 'REST API service'
    technology 'Node.js'
  }

}

views {
  view index {
    include *
  }
}
"
`;
